tests/src/frontend/typechecking/invalid/invalid_tparam_match_4.sk
class C<T>(value: T)

fun getMaxTimeFromFilter<V: Show>(x: C<V>): Nullable<Int> {
  x match {
  | C(Int _) -> Null()
  }
}
